<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nav_label_searchbooks">Search books</string>
    <string name="search_for_a_book">Search for a book</string>
    <string name="search_icon_cont_desc">Search icon</string>
    <string name="close_icon_cont_desc">Close icon</string>
    <string name="search_error_message">Error searching for book. Please try again.</string>
    <string name="search_retry_button">Retry</string>

    <string name="add_to_shelf_button_text">Add to shelf</string>
    <string name="book_info_load_error_message">Error loading book details.</string>
    <string name="add_to_bookshelf_error_message">Error adding book to bookshelf.</string>
    <string name="book_info_ratings_template">Ratings: %1$.2f/5.0 out of %2$d reviews</string>
    <string name="book_info_pagecount_template">Number of pages: %1$d</string>
    <string name="book_info_publisher_template">Publisher: %1$s</string>
    <string name="book_info_publish_date_template">Date published: %1$s</string>
</resources>
